--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-contrib-watch": "~0.5.3",
     "chai": "~1.8.1",
     "mocha": "~1.14.0",
-    "coffee-script": "~1.6.3"
+    "coffee-script": "~1.6.3",
+    "sinon": "~1.7.3"
   }
 }
